--- a/views/api.handlebars
+++ b/views/api.handlebars
@@ -1,1 +1,4 @@
-api
+<p>Api Version: <span>v1</span></p>
+<p>Api Key: <span>{{key}}</span></p>
+<p>Place your API key in all requests as the <span>Authorization</span> header.</p>
+<p>See the <span>README.md</span> for further documentation.</p>
