--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
     <p>CSV Up is currently configured to store documents in S3 bucket <span>{{stats.storage.bucketId}}<span>.</p>
 
     <h4>Mongo DB</h4>
-    <p>CSV Up is currently configured to store metadata in Mongo DB <span>{{stats.storage.mongoName}}</span>.</p>
+    <p>CSV Up is currently configured to store metadata in Mongo DB: <span>{{stats.storage.mongoUri}}</span></p>
 
     <h4>API, 3rd party</h4>
     <p>CSV Up API status: <span>{{stats.api.enabled}}</span>. Stathat status: <span>{{stats.stathat.enabled}}</span>.</p>
